Finished main section

--- a/index.html
+++ b/index.html
@@ -41,14 +41,113 @@
 
     <main>
       <h2>My work</h2>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+
+      <div class="project-wrapper">
+        <div class="project">
+          <div class="project-img"></div>
+          <div class="project-desc">
+            <div>
+              <h2>Project name</h2>
+
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+              />
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae aperiam velit pariatur iusto hic esse?
+            </p>
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="project-img"></div>
+          <div class="project-desc">
+            <div>
+              <h2>Project name</h2>
+
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+              />
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae aperiam velit pariatur iusto hic esse?
+            </p>
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="project-img"></div>
+          <div class="project-desc">
+            <div>
+              <h2>Project name</h2>
+
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+              />
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae aperiam velit pariatur iusto hic esse?
+            </p>
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="project-img"></div>
+          <div class="project-desc">
+            <div>
+              <h2>Project name</h2>
+
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+              />
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae aperiam velit pariatur iusto hic esse?
+            </p>
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="project-img"></div>
+          <div class="project-desc">
+            <div>
+              <h2>Project name</h2>
+
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+              />
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae aperiam velit pariatur iusto hic esse?
+            </p>
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="project-img"></div>
+          <div class="project-desc">
+            <div>
+              <h2>Project name</h2>
+
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+              />
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae aperiam velit pariatur iusto hic esse?
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer></footer>
+    <script src="script.js"></script>
   </body>
 </html>
