--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <div class="about-me-wrapper">
         <div class="about-me-img"></div>
+        <p>Lena Carter</p>
         <div class="about-me">
           <h1>About me</h1>
           <p>
@@ -147,7 +148,44 @@
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="contact-wrapper">
+        <div class="contact-info">
+          <h2>Contact</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+            impedit, quidem reiciendis nostrum illum architecto.
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam
+            asperiores autem quis minima, numquam molestias.
+          </p>
+          <div class="phone">
+            <img src="asset/phone.svg" alt="" />
+            <p>98 8723 2374</p>
+          </div>
+          <div class="email">
+            <img src="asset/email-outline.svg" alt="" />
+            <p>example@gmail.com</p>
+          </div>
+
+          <div class="icon">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+            />
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
+            />
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+            />
+          </div>
+        </div>
+
+        <div class="contact-img"></div>
+      </div>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
